--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
+        android:elevation="0dp"
+        app:elevation="0dp"
         >
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
