--- a/app/src/main/res/layout/activity_phone_login.xml
+++ b/app/src/main/res/layout/activity_phone_login.xml
@@ -6,7 +6,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.auth.PhoneLoginActivity">
+        tools:context=".view.activites.auth.PhoneLoginActivity">
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
