--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -9,7 +9,7 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.profile.ProfileActivity"
+    tools:context=".view.activites.profile.ProfileActivity"
     android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
