--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.starup.SplashScreenActivity">
+    tools:context=".view.activites.starup.SplashScreenActivity">
 <ImageView
     android:id="@+id/icon"
     android:layout_width="200dp"
