--- a/app/src/main/res/layout/activity_view_image.xml
+++ b/app/src/main/res/layout/activity_view_image.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#000000"
-    tools:context=".view.display.ViewImageActivity">
+    tools:context=".view.activites.display.ViewImageActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
