--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
-    android:layout_marginStart="5dp"
     android:orientation="horizontal">
-        <TextView
+       <TextView
             android:id="@+id/tv_text_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -16,6 +17,7 @@
             android:textColor="#000000"
             android:layout_marginStart="10dp"
             android:text="Text Msg Testing"/>
+
 
 
 </LinearLayout>
