--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,10 +19,14 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
         <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/image_profile"
             android:layout_width="70dp"
             android:layout_height="70dp"
+            app:civ_border="true"
+            app:civ_border_width="1dp"
+            app:civ_border_color="@color/colorPrimaryDark"
 
             android:src="@drawable/usernew"/>
             <ImageView
@@ -84,4 +89,4 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="30dp"/>
 
-</FrameLayout>
+</FrameLayout></layout>
