--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -7,17 +7,31 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
-       <TextView
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_text_chat_left"
+        android:orientation="vertical">
+
+    <TextView
             android:id="@+id/tv_text_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_text_chat_left"
             android:padding="10dp"
             android:textSize="14sp"
             android:textColor="#000000"
             android:layout_marginStart="10dp"
             android:text="Text Msg Testing"/>
+     <TextView
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+            android:textSize="8dp"
+         android:hint="4.AM"
+       android:layout_toEndOf="@+id/tv_text_message"
+         android:layout_marginEnd="5dp"
 
+       />
 
+    </RelativeLayout>
 
 </LinearLayout>
