--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -8,21 +9,38 @@
     android:layout_marginEnd="5dp"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_text_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_text_chat_right"
-        android:padding="10dp"
-        android:textSize="14sp"
-        android:textColor="#F1EFEF"
-        android:layout_marginStart="10dp"
-        android:text="Text Msg Testing"/>
+
+
+     <RelativeLayout
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:background="@drawable/bg_text_chat_right"
+         android:orientation="vertical">
+
+         <TextView
+         android:id="@+id/tv_text_message"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:padding="10dp"
+         android:textSize="14sp"
+         android:textColor="#F1EFEF"
+         android:layout_marginStart="10dp"
+         android:text="Text Msg Testing"/>
+         <TextView
+             android:id="@+id/tv_text_message_time"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_toEndOf="@+id/tv_text_message"
+             android:text="asd"
+           android:textColor="@color/colorWhite"
+             android:textSize="8dp" />
+
+
+
+     </RelativeLayout>
 
 
 
 
 
-
-
-</LinearLayout>
+ </LinearLayout>
