--- a/app/src/main/res/layout/activity_phone_login.xml
+++ b/app/src/main/res/layout/activity_phone_login.xml
@@ -19,6 +19,7 @@
         android:padding="15dp"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/status_checker"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:gravity="center_horizontal"
