--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical">
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,18 +20,18 @@
             android:padding="10dp"
             android:textSize="14sp"
             android:textColor="#000000"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="8dp"
             android:text="Text Msg Testing"/>
-     <TextView
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-            android:textSize="8dp"
-         android:hint="4.AM"
-       android:layout_toEndOf="@+id/tv_text_message"
-         android:layout_marginEnd="5dp"
-
-       />
 
     </RelativeLayout>
-
+   <TextView
+        android:id="@+id/tv_text_message_seen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="8dp"
+        android:text="Seen"
+       android:layout_marginStart="120dp"
+        android:visibility="gone"
+        android:layout_marginEnd="5dp"
+        />
 </LinearLayout>
