--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -7,7 +7,7 @@
     android:gravity="end"
     android:layout_marginBottom="5dp"
     android:layout_marginEnd="5dp"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
 
 
@@ -24,23 +24,24 @@
          android:padding="10dp"
          android:textSize="14sp"
          android:textColor="#F1EFEF"
-         android:layout_marginStart="10dp"
+             android:layout_marginEnd="5dp"
          android:text="Text Msg Testing"/>
-         <TextView
-             android:id="@+id/tv_text_message_time"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_toEndOf="@+id/tv_text_message"
-             android:text="asd"
-           android:textColor="@color/colorWhite"
-             android:textSize="8dp" />
 
 
 
      </RelativeLayout>
 
 
-
+  <TextView
+        android:id="@+id/tv_text_message_seen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:textSize="8dp"
+        android:text="Seen"
+      android:layout_marginLeft="120dp"
+        android:layout_marginEnd="5dp"
+        />
 
 
  </LinearLayout>
