--- a/app/src/main/res/layout/activity_chats.xml
+++ b/app/src/main/res/layout/activity_chats.xml
@@ -131,7 +131,7 @@
                         <com.mikhaellopez.circularimageview.CircularImageView
                             android:layout_width="60dp"
                             android:layout_height="60dp"
-                            android:src="@drawable/camera"/>
+                            android:src="@drawable/cameraa"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -211,7 +211,7 @@
                         <com.mikhaellopez.circularimageview.CircularImageView
                             android:layout_width="60dp"
                             android:layout_height="60dp"
-                            android:src="@drawable/ic_baseline_import_contacts_24"/>
+                            android:src="@drawable/contact"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
