--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -1,37 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-    <RelativeLayout
-        android:layout_width="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginBottom="5dp"
+    android:layout_marginStart="5dp"
+    android:orientation="horizontal">
+    <LinearLayout
+        android:id="@+id/layout_text"
+        android:visibility="visible"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_text_chat_left"
+        android:gravity="start"
         android:orientation="vertical">
 
-    <TextView
+        <TextView
             android:id="@+id/tv_text_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:textSize="14sp"
             android:textColor="#000000"
+            android:background="@drawable/bg_text_chat_left"
             android:layout_marginStart="8dp"
             android:text="Text Msg Testing"/>
-
-    </RelativeLayout>
-   <TextView
-        android:id="@+id/tv_text_message_seen"
+        <TextView
+            android:id="@+id/text_message_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="8dp"
+            android:text="4.30 PM"
+           android:layout_marginStart="8dp"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/layout_image"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="8dp"
-        android:text="Seen"
-       android:layout_marginStart="120dp"
+        android:layout_height="250dp"
         android:visibility="gone"
-        android:layout_marginEnd="5dp"
-        />
+        android:layout_marginStart="100dp"
+        android:orientation="vertical">
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="5dp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/image_chat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                android:src="@drawable/usernew"/>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+
 </LinearLayout>
