--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -1,47 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="end"
-    android:layout_marginBottom="5dp"
-    android:layout_marginEnd="5dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginEnd="10dp"
     android:orientation="vertical">
 
-
-
-     <RelativeLayout
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:background="@drawable/bg_text_chat_right"
-         android:orientation="vertical">
-
-         <TextView
-         android:id="@+id/tv_text_message"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:padding="10dp"
-         android:textSize="14sp"
-         android:textColor="#F1EFEF"
-             android:layout_marginEnd="5dp"
-         android:text="Text Msg Testing"/>
-
-
-
-     </RelativeLayout>
-
-
-  <TextView
-        android:id="@+id/tv_text_message_seen"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/layout_text"
+        android:visibility="visible"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="end"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/tv_text_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_text_chat_right"
+            android:padding="10dp"
+            android:textSize="14sp"
+            android:textColor="@android:color/white"
+            android:layout_marginStart="10dp"
+            android:text="this is text message"/>
+        <TextView
+            android:id="@+id/text_message_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="6dp"
+            android:layout_marginLeft="120dp"
+            android:layout_marginEnd="5dp"
+            tools:ignore="MissingPrefix" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_image"
+        android:layout_width="wrap_content"
+        android:layout_height="250dp"
+        android:layout_marginStart="100dp"
         android:visibility="gone"
-        android:textSize="8dp"
-        android:text="Seen"
-      android:layout_marginLeft="120dp"
-        android:layout_marginEnd="5dp"
-        />
+        android:orientation="vertical">
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="5dp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/image_chat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                android:src="@drawable/usernew"/>
+        </androidx.cardview.widget.CardView>
 
- </LinearLayout>
+    </LinearLayout>
+
+</LinearLayout>
