--- a/app/src/main/res/drawable/bg_text_chat_left.xml
+++ b/app/src/main/res/drawable/bg_text_chat_left.xml
@@ -5,7 +5,7 @@
         android:radius="15dp"
         android:topLeftRadius="0dp"
         />
-    <solid android:color="@color/colorWhite"/>
+    <solid android:color="#EAEAEA"/>
 
 
 </shape>
