--- a/app/src/main/res/layout/activity_chats.xml
+++ b/app/src/main/res/layout/activity_chats.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout>
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#F8F8F8"
+        android:background="@color/colorPrimary"
         tools:context=".view.activites.chats.ChatsActivity">
 
         <androidx.appcompat.widget.Toolbar
@@ -35,6 +36,7 @@
                     android:id="@+id/image_profile"
                     android:layout_width="50dp"
                     android:layout_height="49dp"
+                    android:layout_marginLeft="15dp"
                     android:src="@drawable/usernew"
                     app:civ_border="true"
                     app:civ_border_color="#A3A3A3"
@@ -71,14 +73,30 @@
 
         </androidx.appcompat.widget.Toolbar>
 
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+        <LinearLayout
+            android:id="@+id/whole_message"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/ln_action"
-            android:layout_below="@+id/toolbar"
-            />
+            android:layout_below="@id/toolbar"
+            android:orientation="vertical"
+            android:background="@drawable/message_curve">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="65dp" />
+        </LinearLayout>
+
+           <!-- for above recyverView
+           android:layout_marginTop="?actionBarSize"
+           android:layout_above="@+id/ln_action"
+            android:layout_below="@+id/toolbar"-->
+
 
         <androidx.cardview.widget.CardView
             android:id="@+id/layout_actions"
@@ -224,6 +242,122 @@
 
         <LinearLayout
             android:id="@+id/ln_action"
+            android:visibility="visible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    app:cardElevation="2dp"
+                    app:cardCornerRadius="25dp"
+                    >
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="15dp"
+                        android:paddingEnd="15dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:background="@android:color/transparent"
+                        android:orientation="horizontal">
+                        <ImageView
+                            android:id="@+id/btn_emoji"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:src="@drawable/smiley"
+                            android:layout_marginEnd="15dp"
+                            android:layout_gravity="center_vertical"/>
+                        <EditText
+                            android:id="@+id/ed_message"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="10dp"
+                            android:padding="8dp"
+                            android:background="@android:color/transparent"
+                            android:hint="Ed thavo "/>
+                        <ImageView
+                            android:id="@+id/btn_file"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:layout_marginEnd="15dp"
+                            android:tint="#737373"
+                            android:src="@drawable/ic_baseline_attachment_24"
+                            android:layout_gravity="center_vertical"/>
+                        <ImageView
+                            android:id="@+id/btn_camera"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:tint="#737373"
+                            android:src="@drawable/ic_baseline_photo_camera_24"
+                            android:layout_gravity="center_vertical"/>
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/btn_send"
+                    android:visibility="invisible"
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:tint="@color/colorPrimaryDark"
+                    android:layout_margin="5dp"
+                    android:src="@drawable/ic_baseline_send_24"/>
+
+            </LinearLayout>
+        </LinearLayout>
+
+
+        <com.devlomi.record_view.RecordView
+            android:id="@+id/record_view"
+            android:visibility="visible"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerVertical="true"
+            android:layout_margin="10dp"
+            android:layout_toStartOf="@id/record_button"
+            app:slide_to_cancel_arrow="@drawable/recv_ic_arrow"
+
+            app:slide_to_cancel_arrow_color="@android:color/black"
+            app:slide_to_cancel_bounds="8dp"
+            app:slide_to_cancel_margin_right="4dp"
+            app:slide_to_cancel_text="Nho Menath Dhubudhuvo"
+            app:counter_time_color="#ff0000"
+            />
+
+        <com.devlomi.record_view.RecordButton
+            android:id="@+id/record_button"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_margin="6dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/recv_bg_mic"
+            android:backgroundTint="@color/colorAccent"
+
+            android:scaleType="centerInside"
+            android:visibility="visible"
+            android:tint="@android:color/white"
+            android:padding="17dp"
+            app:mic_icon="@drawable/recv_ic_mic" />
+
+      <!--  <LinearLayout
+            android:id="@+id/ln_action"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -304,6 +438,41 @@
             </LinearLayout>
 
         </LinearLayout>
+
+        <com.devlomi.record_view.RecordView
+            android:id="@+id/record_view"
+            android:visibility="visible"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerVertical="true"
+            android:layout_margin="10dp"
+            android:layout_toStartOf="@+id/record_button"
+             app:slide_to_cancel_arrow="@drawable/ic_baseline_arrow_back_ios_24"
+            app:slide_to_cancel_arrow_color="@color/colorPrimaryDark"
+            app:slide_to_cancel_bounds="10dp"
+            app:slide_to_cancel_margin_right="20dp"
+            app:slide_to_cancel_text="VadhaSedhu Nokho"
+            app:counter_time_color="#ff0000"/>
+
+        <com.devlomi.record_view.RecordButton
+            android:id="@+id/record_button"
+            android:layout_width="50dp"
+            android:layout_height="5dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/recv_bg_mic"
+            android:backgroundTint="@color/colorAccent"
+            android:scaleType="centerInside"
+            android:visibility="visible"
+            android:tint="@android:color/white"
+            android:padding="17dp"
+            app:mic_icon="@drawable/recv_ic_mic"/>-->
+
+
+
 
     </RelativeLayout>
 </layout>
