--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.MainActivity"
+    android:background="@color/colorPrimary"
     android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -21,8 +21,10 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            app:title="ChatKer"
-            app:titleTextColor="#f5f5f5" />
+            app:title="c h a t k e r"
+            app:titleTextAppearance="@style/ToolbarThemeOverlay"
+            app:titleTextColor="#f5f5f5"
+          />
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.material.tabs.TabLayout
@@ -31,30 +33,35 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         app:tabBackground="@color/colorPrimary"
-        app:tabGravity="fill"
-        app:tabIndicator="@color/colorPrimary"
+        app:tabGravity="center"
+        app:tabTextColor="@color/colorWhite"
         app:tabIndicatorHeight="3dp"
-        app:tabSelectedTextColor="@color/colorWhite"
-        app:tabIndicatorColor="@color/colorWhite"
-        app:tabTextColor="@color/colorWhite">
+        app:tabSelectedTextColor="#C6C6C6"
+        app:tabIndicator="@color/colorPrimary">
     </com.google.android.material.tabs.TabLayout>
 
+   <!--
+
+  -->
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
-        android:visibility="visible"
-        android:layout_below="@id/tab_layout"
-        app:layout_scrollFlags="scroll|enterAlways|snap"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-   <!-- <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_action"
-        android:src="@drawable/ic_baseline_chat_24"
-        android:tint="@color/colorPrimary"
-        android:layout_width="wrap_content"
-        android:layout_height="150dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_margin="30dp"/>-->
+        android:layout_height="match_parent"
+        android:layout_below="@id/tab_layout"
+        android:layout_marginTop="0dp"
+        android:background="@drawable/view_page"
+        android:visibility="visible"
+        app:layout_scrollFlags="scroll|enterAlways|snap" />
+
+    <!-- <com.google.android.material.floatingactionbutton.FloatingActionButton
+         android:id="@+id/fab_action"
+         android:src="@drawable/ic_baseline_chat_24"
+         android:tint="@color/colorPrimary"
+         android:layout_width="wrap_content"
+         android:layout_height="150dp"
+         android:layout_alignParentBottom="true"
+         android:layout_alignParentRight="true"
+         android:layout_margin="30dp"/>-->
 
 </RelativeLayout>
 </layout>
