--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -70,9 +70,39 @@
             </LinearLayout>
 
             <View
+                android:id="@+id/backgroundView"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="#FFF5FF"/>
+                />
+            <LinearLayout
+                android:id="@+id/ln_chat_theme"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="15sp"
+                android:orientation="horizontal">
+
+
+               <com.mahfa.dnswitch.DayNightSwitch
+                    android:id="@+id/dayNight"
+                    android:layout_width="40dp"
+                    android:layout_height="20dp"
+                    android:layout_marginLeft="10dp"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="15dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:textColor="@android:color/black"
+                        android:text="ChatKer Theme"/>
+                </LinearLayout>
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/ln_account"
