--- a/app/src/main/res/layout/activity_view_image.xml
+++ b/app/src/main/res/layout/activity_view_image.xml
@@ -65,6 +65,6 @@
         android:layout_height="match_parent"
         android:transitionName="image"
         android:src="@drawable/usernew"
-        android:scaleType="center"/>
+        android:scaleType="centerInside"/>
 </LinearLayout>
 </layout>
