--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -35,6 +35,7 @@
             android:layout_marginEnd="5dp"
             tools:ignore="MissingPrefix" />
 
+
     </LinearLayout>
 
     <LinearLayout
@@ -59,5 +60,54 @@
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/layout_voice"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:visibility="visible"
+        android:background="@drawable/bg_layout_round"
+        android:orientation="horizontal">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="-3dp"
+            android:layout_height="wrap_content">
+
+            <ImageButton
+                android:id="@+id/btn_play_chat"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/ic_baseline_play_circle_filled_24"
+                android:clickable="false"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                android:visibility="visible"
+                />
+
+        </RelativeLayout>
+        <View
+            android:id="@+id/v_length"
+            android:layout_width="match_parent"
+            android:layout_marginEnd="15dp"
+            android:layout_height="1dp"
+            android:layout_marginStart="10dp"
+            android:layout_gravity="center_vertical"
+            android:background="@android:color/white" />
+        <Chronometer
+            android:id="@+id/tv_duration"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
+            android:visibility="gone"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="10dp"
+            android:gravity="center"
+            android:text="01:00"
+            android:textColor="@android:color/white" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
