--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,18 +1,30 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorWhite</item>
         <item name="android:textColorSecondary">@color/colorWhite</item>
+
+
     </style>
+
 
     <style name="AppTheme.WhiteAccent" parent="Theme.AppCompat.Light.Dialog.Alert" >
         <item name="colorAccent">@color/colorPrimaryDark</item> <!-- Whatever color you want-->
     </style>
 
-    
+    <style name="ToolbarThemeOverlay" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:fontFamily">@font/sourastra</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+
+    <style name="MineCustomTabText" parent="TextAppearance.Design.Tab">
+
+        <item name="android:fontFamily">@font/sourastra</item>
+    </style>
 
 
 
